# causal-edge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAPABILITY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  strategies.yaml
causal_edge/: __init__.py  cli.py  config.py  scaffold.py
causal_edge/card/: __init__.py  generate.py
causal_edge/dashboard/: AGENTS.md  _helpers.py  components.py  generator.py  portfolio.py  server.py
causal_edge/dashboard/templates/: base.html
causal_edge/engine/: AGENTS.md  base.py  ledger.py  trader.py
causal_edge/harness/: AGENTS.md  __init__.py  lifecycle.py  pipeline.py  types.py
causal_edge/plugins/: AGENTS.md  __init__.py
causal_edge/research/: AGENTS.md  __init__.py  bto.py  evaluate.py  workspace.py
causal_edge/validation/: AGENTS.md  __init__.py  _look_ahead_ast.py  gate.py  look_ahead.py  look_ahead_rules.md  metrics.py
causal_edge/validation/profiles/: crypto_daily.yaml  equity_daily.yaml  hft.yaml
docs/: add-strategy.md  harness-guide.md  strategy-card-standard.md  why-causal.md
docs/superpowers/plans/: 2026-03-31-causal-edge-implementation.md  2026-04-05-harness-module.md
docs/superpowers/specs/: 2026-03-31-causal-edge-framework-design.md  (+1 more)
examples/causal_demo/: causal_graph.json  engine.py
examples/momentum_ml/: engine.py
examples/sma_crossover/: engine.py
strategies/: AGENTS.md
tests/: test_cli.py  test_harness.py  test_ledger.py  test_look_ahead.py  test_research.py  test_shadow_lookahead.py  test_structure.py  test_triangle.py  test_validation.py
