[project]
name = "causal-edge"
version = "0.1.0"
description = "Agent-native quant framework with institutional-grade validation"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "click>=8.0",
]

[project.scripts]
causal-edge = "causal_edge.cli:main"

[project.optional-dependencies]
abel = ["requests>=2.28"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["causal_edge*"]

[tool.setuptools.package-data]
"causal_edge" = [
    "validation/profiles/*.yaml",
    "dashboard/templates/*.html",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py311"
